--- a/netlify.toml
+++ b/netlify.toml
@@ -27,4 +27,4 @@
       X-Content-Type-Options = "nosniff"
       X-Frame-Options = "DENY"
       Referrer-Policy = "no-referrer"
-      Permissions-Policy = "geolocation=(), microphone=(), camera=()"
+      Permissions-Policy = "geolocation=(self), microphone=(), camera=()"
